--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "dependencies": {
-    "electron": "^2.0.4"
+    "electron": "^2.0.4",
+    "pug": "^2.0.4"
   }
 }
