--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hello-world",
+  "name": "mercode",
+  "license": "AGPL-3.0-or-later",
   "version": "1.0.0",
   "main": "main.js",
   "dependencies": {
