--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "version": "1.0.0",
   "main": "main.js",
   "dependencies": {
-    "pug": "^2.0.4"
+    "pug-cli": "^1.0.0-alpha6"
+  },
+  "scripts": {
+    "start": "pug -w ./ -o ./mercode.org & pug -w ./tr -o ./mercode.org/tr & http-server -p 3333 mercode.org",
+    "build": "pug ./ -o ./mercode.org && pug ./tr -o ./mercode.org/tr"
+  },
+  "devDependencies": {
+    "http-server": "^0.12.1"
   }
 }
